--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#1D3557" />
     <meta
       name="description"
-      content="Professional construction firm providing quality building services"
+      content="CHHIKARA CONSTRUCTIONS - Professional construction services in Jhajjar, Haryana. Quality building solutions for residential and commercial projects."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.svg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Construction Firm - Professional Building Services</title>
+    <title>CHHIKARA CONSTRUCTIONS - Quality Building Services</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
